fix the centre alignment of OUR LEGACY OF EXCELLENCE section in mobile version

--- a/slashkariagroup/assets/css/style.css
+++ b/slashkariagroup/assets/css/style.css
@@ -3194,6 +3194,15 @@ header.scrolled .logo img {
         text-align: center;
     }
 
+    .legacy-accent {
+        margin: 0 auto 30px auto;
+    }
+
+    .legacy-description {
+        text-align: center;
+        margin: 0 auto;
+    }
+
     .values-left {
         align-items: center;
         text-align: center;
